--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/sms_db
-#spring.datasource.username=root
-#spring.datasource.password=anujmani$
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#server.error.include-message=always
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/sms_db
 spring.datasource.username=postgres
 spring.datasource.password=By@$hna%
@@ -17,3 +8,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.error.include-message=always
 spring.jpa.open-in-view=false
+
+# Enable Spring's caching debug logging
+logging.level.org.springframework.cache=DEBUG
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
