ehcaching implemented on student

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,23 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 server.error.include-message=always
 spring.jpa.open-in-view=false
 
+
+##configuring ehcache.xml
+#spring.cache.jcache.config=classpath:ehcache.xml
+
 # Enable Spring's caching debug logging
 logging.level.org.springframework.cache=DEBUG
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+
+##max time to retrive data from cache
+#spring.data.redis.timeout=10000
+#
+##to deny null values in cache
+#spring.cache.redis.cache-null-values=false
+#
+##to use key prefix to add cache
+#spring.cache.redis.use-key-prefix=true
+#
+#spring.cache.redis.key-prefix=library
+#
+##cached items will expire after one minute
+#spring.cache.redis.time-to-live=120000
