--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//
+implementation 'org.springframework.boot:spring-boot-starter-cache'
+// https://mvnrepository.com/artifact/org.ehcache/ehcache
+	implementation group: 'org.ehcache', name: 'ehcache', version: '3.10.8'
+
 
 }
 
